--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   },
   "dependencies": {
     "gatsby": "^2.20.12",
+    "gatsby-image": "^2.3.2",
+    "gatsby-plugin-sharp": "^2.5.4",
+    "gatsby-source-contentful": "^2.2.7",
+    "gatsby-source-filesystem": "^2.2.2",
+    "gatsby-transformer-sharp": "^2.4.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
